# cluster-experiments

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  aa_test.html  analysis_with_different_hypotheses.html  create_custom_classes.html  cupac_example.html  delta.html  delta_method.html  e2e_mde.html  e2e_mde_delta.html  e2e_mde_switchback.html  experiment_analysis.html  index.html  license.html  mkdocs.yml  multivariate.html  normal_power.html  normal_power_lines.html  objects.inv  paired_ttest.html  plot_calendars.html  plot_calendars_hours.html  pyproject.toml  quickstart.html  relative.html  ruff.toml  setup.py  sitemap.xml  switchback.html  synthetic_control.html  tox.ini  washover_example.html
.github/workflows/: docs.yml  docs_test.yml  periodic.yml  release.yml  testing.yml
ab_lab/: __init__.py  cupac.py  experiment_analysis.py  perturbator.py  power_analysis.py  power_config.py  random_splitter.py  utils.py  washover.py
ab_lab/inference/: analysis_plan.py  hypothesis_test.py
api/: analysis_plan.html  analysis_results.html  cupac_model.html  dimension.html  experiment_analysis.html  hypothesis_test.html  metric.html  perturbator.html  power_analysis.html  power_config.html  random_splitter.html  variant.html  washover.html
cluster_experiments/: __init__.py  analysis_plan.py  analysis_results.py  cupac.py  dimension.py  experiment_analysis.py  hypothesis_test.py  metric.py  perturbator.py  power_analysis.py  power_analysis_parallel.py  power_config.py  pre_experiment_covariates.py  random_splitter.py  relative_lift_transformer.py  synthetic_control.py  synthetic_control_utils.py  utils.py  variant.py  washover.py
cluster_experiments/analytics/: analysis_plan.py  dimension.py  hypothesis_test.py
cluster_experiments/inference/: analysis_plan.py  analysis_plan_config.py  analysis_results.py  dimension.py  hypothesis_test.py  metric.py  variant.py
docs/: CONTRIBUTING.md  aa_test.ipynb  analysis_with_different_hypotheses.ipynb  analysis_with_different_hypothesis.ipynb  create_custom_classes.ipynb  cupac_example.ipynb  delta.md  delta_method.ipynb  e2e_mde.ipynb  e2e_mde_delta.ipynb  e2e_mde_switchback.ipynb  example.ipynb  experiment_analysis.ipynb  index.html  index.md  license.md  multivariate.ipynb  normal_power.ipynb  normal_power_lines.ipynb  paired_ttest.ipynb  plot_calendars.ipynb  plot_calendars_hours.ipynb  power_analysis_guide.md  quickstart.md  relative.ipynb  relative_delta.ipynb  short_example.py  switchback.ipynb  synthetic_control.ipynb  washover_example.ipynb
docs/api/: analysis_plan.md  analysis_results.md  cupac_model.md  dimension.md  experiment_analysis.md  featurizer.md  hypothesis_test.md  metric.md  perturbator.md  power_analysis.md  power_config.md  random_splitter.md  variant.md  washover.md
docs/examples/: cluster_randomization.ipynb  simple_ab_test.ipynb
docs/stylesheets/: overrides.css  style.css
examples/: cluster_randomization.html  cupac_example_gbm.py  cupac_example_target_mean.py  long_example.py  parallel_example.py  short_example.py  short_example_config.py  short_example_dict.py  short_example_paired_ttest.py  short_example_synthetic_control.py  simple_ab_test.html  washover_example.ipynb
search/: search_index.json
stylesheets/: overrides.css
tests/: conftest.py  examples.py  test_aggregator.py  test_analysis.py  test_cupac_handler.py  test_docs.py  test_non_clustered.py  test_perturbator.py  test_power_analysis.py  test_splitter.py  test_utils.py  utils.py
tests/analysis/: conftest.py  test_analysis.py  test_delta_e2e.py  test_delta_method.py  test_delta_relative.py  test_formula.py  test_hypothesis.py  test_lift_transformer.py  test_ols_analysis.py  test_synthetic_analysis.py
tests/cupac/: conftest.py  test_aggregator.py  test_cupac_handler.py
tests/inference/: conftest.py  test_analysis_plan.py  test_analysis_plan_config.py  test_analysis_results.py  test_delta_method.py  test_dimension.py  test_hypothesis_test.py  test_metric.py  test_variant.py
tests/perturbator/: conftest.py  test_perturbator.py
tests/power_analysis/: conftest.py  test_cupac_power.py  test_multivariate.py  test_normal_power_analysis.py  test_parallel.py  test_power_analysis.py  test_power_analysis_delta.py  test_power_analysis_with_experiment_data.py  test_power_analysis_with_pre_experiment_data.py  test_power_raises.py  test_seed.py  test_switchback_power.py
tests/power_config/: test_missing_arguments_error.py  test_params_flow.py  test_warnings_superfluous_params.py
tests/splitter/: conftest.py  test_fixed_size_clusters_splitter.py  test_predefined_treatment_clusters_splitter.py  (+4 more)
